Correcter overflow-x: hidden;

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   background: #e6eff6;
   font-family: 'Poppins', sans-serif;
   color: #fff;
-  overflow-x: hiden
+  overflow-x: hidden;
 }
 .container-fluid {
   display: grid;
